k8s/xx-whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: kube-system
  annotations:
    #cert-manager.io/cluster-issuer: local-selfsigned
    #traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: raspi5.local
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 5678
          - path: /traefid_dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
